final changes with extra part

--- a/index.html
+++ b/index.html
@@ -43,8 +43,9 @@
 
     <!--My Latest Work part starts from here-->
     <section class="latest-work">
+
         <div class="naming-heading">
-            <h1 class="work-heading">My Latest Work</h1><br><br><br><br>
+        <h1 class="work-heading">My Latest Work</h1><br><br><br><br>
         </div>
 
         <div class="one-third">
@@ -58,11 +59,13 @@
         <div class="one-third">
             <img src="images/latest-work/work-3.jpg" alt="">
         </div> 
+
     </section>
     <!--My Latest Work part ends here-->
 
     <!--What Client Say part starts from here-->
     <section class="clients-part">
+
         <div class="text-alignment">
             <h1 >What Clients Say</h1><br>
             <h3 >Bruce Moccy</h3>
@@ -73,14 +76,17 @@
         <div id="leave-message"class="text-alignment">
             <h5>Leave me a message in the </h5>
             <h3>programming.hero1@gmail.com</h3>
-
         </div>
-        
+   
     </section>
+
+    <!--Footer part starts from here--> 
+
     <footer class="last-part">
         <h5>Programming Hero Initiative © 2020 All Rights Reserved.</h5>
-
     </footer>
+
+    <!--Extra for bonus is to create a background box in Footer area-->
     
 </body>
 </html>
